updated for netlify deploy

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDD Lab #2</title>
+    <link rel="shortcut icon" href="#">
 </head>
+
 <body>
+    <h1>Pig Latin Translator</h1>
     <div>
         <label for="entry">Text to be translated: </label>
         <input id="entry" type="text">
@@ -17,4 +21,5 @@
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
