updated for netlify deploy

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TDD Lab #2</title>
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <h1>Pig Latin Translator</h1>
     <div>
-        <label for="entry">Text to be translated: </label>
+        <label for="entry">Word to translate: </label>
         <input id="entry" type="text">
     </div>
     <div>
